--- a/index.html
+++ b/index.html
@@ -1,200 +1,203 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Intro Component with Signup Form</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="./dist/index.1a572227.css" />
-</head>
-<body>
-  <header></header>
-  <main>
-    <div class="component">
-      <div class="component__header">
-        <h1>Learn to code by watching others</h1>
-        <h3>
-          See how experienced developers solve problem in real-time. Watching
-          scripted tutorials is great, but understanding how developers think is
-          invaluable.
-        </h3>
-      </div>
-      <div class="component__body">
-        <div class="component__cta">
-          <p><span>Try it free 7 days </span>then $20/mo. thereafter</p>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Intro Component with Signup Form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./dist/index.1a572227.css" />
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <div class="component">
+        <div class="component__header">
+          <h1>Learn to code by watching others</h1>
+          <h2>
+            See how experienced developers solve problem in real-time. Watching
+            scripted tutorials is great, but understanding how developers think
+            is invaluable.
+          </h2>
         </div>
-        <div class="component__form">
-          <form
-            id="signupForm"
-            novalidate
-            action="#"
-            method="post"
-            name="Sign up form"
-            onsubmit="return false"
-          >
-            <fieldset>
-              <div>
-                <label for="firstName"></label
-                ><input
-                  id="firstName"
-                  type="text"
-                  name="First Name"
-                  placeholder="First Name"
-                />
-                <div class="error-icon hidden">
-                  <svg width="24" height="24">
-                    <g fill="none" fill-rule="evenodd">
-                      <circle fill="#FF7979" cx="12" cy="12" r="12" />
-                      <rect
-                        fill="#FFF"
-                        x="11"
-                        y="6"
-                        width="2"
-                        height="9"
-                        rx="1"
-                      />
-                      <rect
-                        fill="#FFF"
-                        x="11"
-                        y="17"
-                        width="2"
-                        height="2"
-                        rx="1"
-                      />
-                    </g>
-                  </svg>
+        <div class="component__body">
+          <div class="component__cta">
+            <p><span>Try it free 7 days </span>then $20/mo. thereafter</p>
+          </div>
+          <div class="component__form">
+            <form
+              id="signupForm"
+              novalidate
+              action="#"
+              method="post"
+              name="Sign up form"
+              onsubmit="return false"
+            >
+              <fieldset>
+                <div>
+                  <label for="firstName"></label
+                  ><input
+                    id="firstName"
+                    type="text"
+                    name="First Name"
+                    placeholder="First Name"
+                  />
+                  <div class="error-icon hidden">
+                    <svg width="24" height="24">
+                      <g fill="none" fill-rule="evenodd">
+                        <circle fill="#FF7979" cx="12" cy="12" r="12" />
+                        <rect
+                          fill="#FFF"
+                          x="11"
+                          y="6"
+                          width="2"
+                          height="9"
+                          rx="1"
+                        />
+                        <rect
+                          fill="#FFF"
+                          x="11"
+                          y="17"
+                          width="2"
+                          height="2"
+                          rx="1"
+                        />
+                      </g>
+                    </svg>
+                  </div>
                 </div>
-              </div>
-              <span class="error-message"></span>
-              <div>
-                <label for="lastName"></label
-                ><input
-                  id="lastName"
-                  type="text"
-                  name="Last Name"
-                  placeholder="Last Name"
-                />
-                <div class="error-icon hidden">
-                  <svg width="24" height="24">
-                    <g fill="none" fill-rule="evenodd">
-                      <circle fill="#FF7979" cx="12" cy="12" r="12" />
-                      <rect
-                        fill="#FFF"
-                        x="11"
-                        y="6"
-                        width="2"
-                        height="9"
-                        rx="1"
-                      />
-                      <rect
-                        fill="#FFF"
-                        x="11"
-                        y="17"
-                        width="2"
-                        height="2"
-                        rx="1"
-                      />
-                    </g>
-                  </svg>
+                <span class="error-message"></span>
+                <div>
+                  <label for="lastName"></label
+                  ><input
+                    id="lastName"
+                    type="text"
+                    name="Last Name"
+                    placeholder="Last Name"
+                  />
+                  <div class="error-icon hidden">
+                    <svg width="24" height="24">
+                      <g fill="none" fill-rule="evenodd">
+                        <circle fill="#FF7979" cx="12" cy="12" r="12" />
+                        <rect
+                          fill="#FFF"
+                          x="11"
+                          y="6"
+                          width="2"
+                          height="9"
+                          rx="1"
+                        />
+                        <rect
+                          fill="#FFF"
+                          x="11"
+                          y="17"
+                          width="2"
+                          height="2"
+                          rx="1"
+                        />
+                      </g>
+                    </svg>
+                  </div>
                 </div>
-              </div>
-              <span class="error-message"></span>
-              <div>
-                <label for="emailField"></label
-                ><input
-                  id="emailField"
-                  type="email"
-                  name="Email"
-                  placeholder="Email Address"
-                />
-                <div class="error-icon hidden">
-                  <svg width="24" height="24">
-                    <g fill="none" fill-rule="evenodd">
-                      <circle fill="#FF7979" cx="12" cy="12" r="12" />
-                      <rect
-                        fill="#FFF"
-                        x="11"
-                        y="6"
-                        width="2"
-                        height="9"
-                        rx="1"
-                      />
-                      <rect
-                        fill="#FFF"
-                        x="11"
-                        y="17"
-                        width="2"
-                        height="2"
-                        rx="1"
-                      />
-                    </g>
-                  </svg>
+                <span class="error-message"></span>
+                <div>
+                  <label for="emailField"></label
+                  ><input
+                    id="emailField"
+                    type="email"
+                    name="Email"
+                    placeholder="Email Address"
+                  />
+                  <div class="error-icon hidden">
+                    <svg width="24" height="24">
+                      <g fill="none" fill-rule="evenodd">
+                        <circle fill="#FF7979" cx="12" cy="12" r="12" />
+                        <rect
+                          fill="#FFF"
+                          x="11"
+                          y="6"
+                          width="2"
+                          height="9"
+                          rx="1"
+                        />
+                        <rect
+                          fill="#FFF"
+                          x="11"
+                          y="17"
+                          width="2"
+                          height="2"
+                          rx="1"
+                        />
+                      </g>
+                    </svg>
+                  </div>
                 </div>
-              </div>
-              <span class="email-invalid error-message"></span>
-              <div>
-                <label for="passwordField"></label
-                ><input
-                  id="passwordField"
-                  type="password"
-                  name="Password"
-                  placeholder="Password"
-                />
-                <div class="error-icon hidden">
-                  <svg width="24" height="24">
-                    <g fill="none" fill-rule="evenodd">
-                      <circle fill="#FF7979" cx="12" cy="12" r="12" />
-                      <rect
-                        fill="#FFF"
-                        x="11"
-                        y="6"
-                        width="2"
-                        height="9"
-                        rx="1"
-                      />
-                      <rect
-                        fill="#FFF"
-                        x="11"
-                        y="17"
-                        width="2"
-                        height="2"
-                        rx="1"
-                      />
-                    </g>
-                  </svg>
+                <span class="email-invalid error-message"></span>
+                <div>
+                  <label for="passwordField"></label
+                  ><input
+                    id="passwordField"
+                    type="password"
+                    name="Password"
+                    placeholder="Password"
+                  />
+                  <div class="error-icon hidden">
+                    <svg width="24" height="24">
+                      <g fill="none" fill-rule="evenodd">
+                        <circle fill="#FF7979" cx="12" cy="12" r="12" />
+                        <rect
+                          fill="#FFF"
+                          x="11"
+                          y="6"
+                          width="2"
+                          height="9"
+                          rx="1"
+                        />
+                        <rect
+                          fill="#FFF"
+                          x="11"
+                          y="17"
+                          width="2"
+                          height="2"
+                          rx="1"
+                        />
+                      </g>
+                    </svg>
+                  </div>
                 </div>
-              </div>
-              <span class="error-message"></span><label for="submitBtn"></label
-              ><input
-                class="form__button"
-                id="submitBtn"
-                type="submit"
-                value="Claim your free trial"
-              />
-              <p>
-                By clicking the button, you are agreeing to our
-                <span>Terms and Services</span>
-              </p>
-            </fieldset>
-          </form>
+                <span class="error-message"></span
+                ><label for="submitBtn"></label
+                ><input
+                  class="form__button"
+                  id="submitBtn"
+                  type="submit"
+                  value="Claim your free trial"
+                />
+                <p>
+                  By clicking the button, you are agreeing to our
+                  <span>Terms and Services</span>
+                </p>
+              </fieldset>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
-  <footer>
-    <div class="footer__content">
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Peter Hannell</a>.
-      </p>
-    </div>
-  </footer>
-</body>
-<script src="./dist/index.d6d3daf3.js"></script>
+    </main>
+    <footer>
+      <div class="footer__content">
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Peter Hannell</a>.
+        </p>
+      </div>
+    </footer>
+  </body>
+  <script src="./dist/index.d6d3daf3.js"></script>
+</html>
